Apply Raven + Mitch suggestions
- Rename "instanced" to "perThread"
- Use getAnnotation instead of getAnnotationsByType
- Rename IThreadSafeISBRH to ThreadSafeISBRHFactory
- Throw cause of RuntimeException after newInstance